--- a/jetson_pytorch_docker/DockerFile
+++ b/jetson_pytorch_docker/DockerFile
@@ -9,6 +9,11 @@ RUN apt-get install -y -q
 
 RUN apt-get -y update && apt-get -y upgrade && apt-get -y dist-upgrade && apt-get -y install git
 
+
+RUN pip3 install bson
+
+RUN mkdir /home/exon && cd /home/exon && git clone -b v0.11.1 https://github.com/pytorch/vision.git
+
 # RUN sudo apt-get -y install curl zip unzip tar
 
 # RUN sudo apt install -y dbus-x11
