--- a/jetson_pytorch_docker/DockerFile
+++ b/jetson_pytorch_docker/DockerFile
@@ -6,6 +6,9 @@ RUN wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/nul
     && echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ bionic main' | tee /etc/apt/sources.list.d/kitware.list >/dev/null
 
 RUN apt-get install -y -q
+RUN apt-get update && apt-get install -y python3.8 python3.8-dev python3.8-venv curl python3-tk
+RUN python3.8 -m pip install -U pip setuptools
+RUN python3.8 -m pip install --ignore-installed PyYAML
 
 RUN apt-get -y update && apt-get -y upgrade && apt-get -y dist-upgrade && apt-get -y install git
 
