--- a/jetson_pytorch_docker_python3_8/DockerFile
+++ b/jetson_pytorch_docker_python3_8/DockerFile
@@ -3,12 +3,27 @@ FROM balenalib/jetson-nano-ubuntu-python:3.8-focal-build
 # RUN echo 'debconf debconf/frontend select Noninteractive' | sudo debconf-set-selections
 
 RUN wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null \
-    && echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ bionic main' | tee /etc/apt/sources.list.d/kitware.list >/dev/null
+    && echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ focal main' | tee /etc/apt/sources.list.d/kitware.list >/dev/null
 
 RUN apt-get install -y -q
 
 RUN apt-get -y update && apt-get -y upgrade && apt-get -y dist-upgrade && apt-get -y install git
 
+WORKDIR "/home/exon/"
+
+RUN apt-get -y install ninja-build cmake
+RUN apt-get install -y libjpeg-dev libopenmpi-dev libomp-dev ccache
+RUN apt-get install -y libopenblas-dev libblas-dev libeigen3-dev
+RUN pip3 install -U --user wheel mock pillow
+RUN pip3 install testresources
+RUN pip3 install setuptools==58.3.0
+RUN pip3 install scikit-build
+RUN git clone -b v1.10.2 --depth=1 --recursive https://github.com/pytorch/pytorch.git
+RUN cd pytorch && pip3 install -r requirements.txt
+
+RUN apt-get -y install clang-8
+RUN ln -s /usr/bin/clang-8 /usr/bin/clang
+RUN ln -s /usr/bin/clang++-8 /usr/bin/clang++
 
 RUN pip3 install bson
 
