--- a/pytorch_docker_focal/DockerFile
+++ b/pytorch_docker_focal/DockerFile
@@ -13,7 +13,7 @@ RUN apt-get install -y python3-pip ninja-build
 
 RUN pip3 install torch==1.10.2+cpu torchvision==0.11.3+cpu -f https://download.pytorch.org/whl/cpu/torch_stable.html
 
-RUN git clone https://github.com/facebookresearch/detectron2.git /home/exon/detectron2
+RUN git clone -b v0.6 https://github.com/facebookresearch/detectron2.git /home/exon/detectron2
 
 RUN cd /home/exon && ls && python3 -m pip install -e detectron2
 
@@ -23,7 +23,14 @@ RUN pip3 install onnx==1.8.1 onnxruntime==1.8.1
 
 RUN pip3 install protobuf==3.19.0
 
-RUN pip3 install numpy==1.19.0
+RUN pip3 install numpy==1.23.0
+
+RUN pip3 install opencv-python-headless==4.5.3.56
+
+#RUN pip3 install onnx onnxruntime
+
+#RUN pip3 install --upgrade numpy
+
 
 # RUN sudo apt-get -y install curl zip unzip tar
 
