--- a/pytorch_docker_focal/DockerFile
+++ b/pytorch_docker_focal/DockerFile
@@ -27,6 +27,8 @@ RUN pip3 install numpy==1.23.0
 
 RUN pip3 install opencv-python-headless==4.5.3.56
 
+RUN pip3 install psutil gputil
+
 #RUN pip3 install onnx onnxruntime
 
 #RUN pip3 install --upgrade numpy
