--- a/jetson_pytorch_docker/DockerFile
+++ b/jetson_pytorch_docker/DockerFile
@@ -28,6 +28,7 @@ RUN python3 -m pip install -e detectron2
 RUN pip3 uninstall -y bson
 RUN pip3 install pymongo
 
+RUN pip3 install psutil
 
 # RUN mkdir /home/exon && cd /home/exon && git clone -b v0.11.1 https://github.com/pytorch/vision.git
 
