Upravy a pridani noveho dockerfilu pro edge

--- a/foxy_home_navigation/Dockerfile
+++ b/foxy_home_navigation/Dockerfile
@@ -37,14 +37,20 @@ RUN sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key F6E65AC044F831A
 
 RUN sudo apt-get -y update && sudo apt-get install -y librealsense2-dkms librealsense2-utils librealsense2-dev
 
+RUN sudo apt install -y ros-foxy-ament-cmake
+RUN sudo apt install -y ros-foxy-diagnostic-updater ros-foxy-rclcpp-components ros-foxy-sensor-msgs
+
 # RELASENSE ROS2 
 RUN sudo apt-get install python3-rosdep -y
-RUN mkdir -p /home/neduchal/ros2_ws/src && cd /home/neduchal/ros2_ws/src && git clone https://github.com/IntelRealSense/realsense-ros.git -b ros2-development
-RUN cd /home/neduchal/ros2_ws/ && rosdep update && rosdep install -i --from-path src --rosdistro $ROS_DISTRO --skip-keys=librealsense2 -y
+RUN sudo apt install -y ros-foxy-librealsense2*
+#RUN mkdir -p /home/neduchal/ros2_ws/src && cd /home/neduchal/ros2_ws/src && git clone https://github.com/IntelRealSense/realsense-ros.git -b ros2-development
+#RUN echo $ROS_DISTRO
+#RUN sudo rosdep fix-permissions
+#RUN cd /home/neduchal/ros2_ws/ && rosdep update && rosdep install -i --from-path src --rosdistro foxy --skip-keys=librealsense2 -y
 #sudo rosdep init && 
 
 RUN mkdir -p $OPT_PATH && cd $OPT_PATH && git clone https://github.com/neduchal/robot_system_core.git $OPT_PATH/robot_system_core
-RUN sudo apt install -y ros-foxy-ament-cmake
+
 RUN git clone https://github.com/neduchal/home_navigation.git /home/neduchal/ros2_ws/src/home_navigation
 
 #RUN echo "source /opt/ros/foxy/setup.bash" >> ~/.bashrc && . .bashrc
