--- a/jetson_edge_computing/DockerFile
+++ b/jetson_edge_computing/DockerFile
@@ -24,11 +24,15 @@ ENV LANG en_US.UTF-8
 
 RUN mkdir -p /home/edge/
 RUN cd /home/edge && git clone https://github.com/open-mmlab/mmdetection.git
-RUN cd mmdetection && git checkout 2.x
-RUN pip3 install -r requirements/build.txt
-RUN pip3 install "git+https://github.com/open-mmlab/cocoapi.git#subdirectory=pycocotools"
-RUN pip3 install -v -e .
+RUN cd /home/edge/mmdetection && git checkout 2.x
+RUN cd /home/edge/mmdetection && pip3 install -r requirements/build.txt
+RUN cd /home/edge/mmdetection && pip3 install "git+https://github.com/open-mmlab/cocoapi.git#subdirectory=pycocotools"
+RUN cd /home/edge/mmdetection && pip3 install -v -e .
 
+WORKDIR /home/edge/
+
+RUN git clone https://github.com/mdegans/nano_build_opencv.git
+RUN cd ./nano_build_opencv && ./build_opencv.sh 4.4.0
 
 #RUN pip3 install scikit-image==0.17.1 -vv
 
